--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <meta name="keywords" content="html, css" />
     <title>Homeland</title>
     <link rel="stylesheet" href="pages/index.css" />
-    <link rel="stylesheet" href="blocks" />
-    <link rel="stylesheet" href="images" />
     <link rel="shortcut icon" href="./favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
   </head>
@@ -18,7 +16,7 @@
       <header class="header">
         <img src="./favicon.svg" alt="Logo art gallery" class="header__logo" />
         <img
-          src="./images/Group 12.svg"
+          src="./images/Group-12.svg"
           alt="art gallery"
           class="header__logo-description"
         />
@@ -28,7 +26,7 @@
             Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
           </p>
           <div class="header__content-image">
-            <img src="images\image.jpg" alt="paisaje" class="header__image" />
+            <img src="./images/image.jpg" alt="paisaje" class="header__image" />
           </div>
         </section>
       </header>
