correccion fonts preconnect

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Homeland</title>
     <link rel="stylesheet" href="pages/index.css" />
     <link rel="shortcut icon" href="./favicon.ico" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="./vendor/fonts.css" />
   </head>
   <body>
     <div class="page">
@@ -42,7 +42,7 @@
             pensamiento y las estructuras que conforman e influyen en nuestras
             vidas.
           </p>
-          <p class="main__paragraph main__paragrap_quote-name_right">
+          <p class="main__paragraph main__paragraph_quote-name_right">
             -Joseph Beuys
           </p>
           <p class="main__paragraph main__paragraph_size-s">
