--- a/index.html
+++ b/index.html
@@ -57,6 +57,155 @@
             nos alegra que seas nuestro vecino.
           </p>
         </section>
+        <section class="gallery">
+          <h2 class="gallery__header">Galería</h2>
+          <img
+            src="./images/Cardigan-Bay.png"
+            alt="Cardigan-Bay"
+            class="gallery__item"
+          />
+          <img
+            src="./images/Gales-sky.png"
+            alt="gales-sky"
+            class="gallery__item"
+          />
+          <img
+            src="./images/Cathedral.png"
+            alt="cathedral"
+            class="gallery__item"
+          />
+          <img src="./images/Bridge.png" alt="bride" class="gallery__item" />
+          <img
+            src="./images/Peace-place.png"
+            alt="peace-place"
+            class="gallery__item"
+          />
+          <img src="./images/park.png" alt="park" class="gallery__item" />
+          <img src="./images/town.png" alt="town" class="gallery__item" />
+        </section>
+        <section class="stories">
+          <div class="stories__content">
+            <h2 class="stories__header">Cricieth, Gales</h2>
+            <div class="stories__image">
+              <img
+                src="./images/Cricieth-Gales.png"
+                alt="Sky-Cricieth-Gales"
+                class="stories__image-item"
+              />
+            </div>
+            <a
+              class="stories__button"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >
+              Compra esta obra como NFT</a
+            >
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="stories__link"
+            >
+              <span class="stories__link-heading">ARTISTAS</span>
+              <p class="stories__link-artist">Steffan Warren, editor jefe</p>
+              <p class="stories__link-artist">
+                Kseniya Glagoleva, gerente de proyectos
+              </p>
+            </a>
+            <p class="stories__paragraph">
+              Las ruinas medievales del castillo de Cricieth dominan la ciudad
+              desde una roca que extiende sobre el mar. Se cree que fue
+              construido por Llewelyn el Grande en el S. XIII. 800 años después,
+              la autodenominada Perla de Gales en las costas de Snowdonia, se ha
+              convertido en un popular destino turístico durante los meses de
+              verano. A pocos pasos de camino al castillo, puedes disfrutar de
+              los mejores helados del mundo en Cadwalader's, cuyo ingrediente
+              secreto se rumorea que son algas marinas de la localidad. Otra
+              cosa por la que es famosa Cricieth es por haber ganado el premio
+              *Gales en flor* durante cinco años seguidos por sus espectaculares
+              muestras florales alrededor de la ciudad. También vio nacer a
+              David Lloyd George, el único galés que ha sido Primer Ministro del
+              Reino Unido.
+            </p>
+          </div>
+          <div class="stories__content">
+            <h2 class="stories__header stories__header_screen_m">
+              Muramvya, Burundi
+            </h2>
+            <div class="stories__image">
+              <img
+                src="./images/Muramvya-Burundi.png"
+                alt="Esculture-Muramvya-Burundi"
+                class="stories__image-item"
+              />
+            </div>
+            <a
+              class="stories__button"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >
+              Compra esta obra como NFT</a
+            >
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="stories__link"
+            >
+              <span class="stories__link-heading">ARTISTAS</span>
+              <p class="stories__link-artist">Travis Turner, autor y editor</p>
+            </a>
+            <p class="stories__paragraph">
+              Berea es una pequeña ciudad ubicada en la parte central de
+              Kentucky. La ciudad está rodeada por hermosos bosques y campos. Es
+              conocida como la capital de la artesanía del estado, y sus
+              visitantes hallarán infinitas posibilidades para ir de compras:
+              tiendas de joyas, velas y artículos de madera artesanales;
+              galerías, talleres de vidrio y más. La ciudad celebra un festival
+              anual que rinde tributo al "spoonbread", un platillo local hecho
+              de pan de maíz y que se sirve con una cuchara de madera. Aunque,
+              probablemente es mejor conocida por su universidad. El Berea
+              College fue fundado en 1855 y fue la primera universidad sureña
+              integrada racialmente, así como la primera en ser coeducacional.
+              Algo que en cierta manera la hace única, es que no cobra
+              colegiatura: cada estudiante recibe una beca del 100%.
+            </p>
+          </div>
+          <div class="stories__content">
+            <h2 class="stories__header stories__header_screen_m">
+              Mérida, México
+            </h2>
+            <div class="stories__image">
+              <img
+                src="./images/Amabilis-Merida-Mexico.png"
+                alt="amabilis-Merida-Mexico"
+                class="stories__image-item"
+              />
+            </div>
+            <a
+              class="stories__button"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >
+              Compra esta obra como NFT</a
+            >
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="stories__link"
+            >
+              <span class="stories__link-heading">ARTISTAS</span>
+              <p class="stories__link-artist">
+                Alejandro Gamboa, autor y editor
+              </p>
+            </a>
+            <p class="stories__paragraph">
+              Diseñada por Manuel Amábilis, arquitecto yucateco que recibió
+              instrucción en París influenciado por la época para volver y poner
+              en práctica el estilo constructivo francés de entonces, esta casa
+              ubicada en el centro de Mérida es uno de los edificios mejor
+              conservados de inicios del siglo XX. De un tono azul intenso con
+              detalles blancos, la Casa Amábilis tiene un estilo recargado que
+              se caracteriza por el uso exagerado de elementos decorativos que
+              remiten al barroco. Los techos, mosaicos y jardines en su interior
+              dan cuenta de un sinfín de motivos ornamentales. Hoy es posible
+              acceder a ella, pues es la sede de la Casa de la Cultura Jurídica
+              en Yucatán.
+            </p>
+          </div>
+        </section>
       </main>
       <footer class="footer">
         <p class="footer__copyright">© 2025. Alejandro Gamboa</p>
